Envio do exercício 3_4

--- a/Semana 03 - Structs e Tipos de dados abstratos/Makefile.win
+++ b/Semana 03 - Structs e Tipos de dados abstratos/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = Cheque.o
-LINKOBJ  = Cheque.o
+OBJ      = Cheque.o Cheque_ex3_4.o
+LINKOBJ  = Cheque.o Cheque_ex3_4.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -26,3 +26,6 @@ $(BIN): $(OBJ)
 
 Cheque.o: Cheque.c
 	$(CC) -c Cheque.c -o Cheque.o $(CFLAGS)
+
+Cheque_ex3_4.o: Cheque_ex3_4.c
+	$(CC) -c Cheque_ex3_4.c -o Cheque_ex3_4.o $(CFLAGS)
